aula 4 e começo da 5

--- a/js/introducao-javascript/index.html
+++ b/js/introducao-javascript/index.html
@@ -69,7 +69,7 @@
 						</tr>
 					</tbody>
 				</table>
-
+				<button id="buscar-pacientes" class="botao bto-principal">Buscar Pacientes</button>
 			</section>
 
 			<!-- Formulário -->
@@ -99,6 +99,7 @@
 		</main>
 
 		<script src="js/default.js"></script>
+		<script src="js/buscar-pacientes.js"></script>
 
 	</body>
 </html>
